package Chess.utils;

public enum Color {
    WHITE, BLACK;
}
